# projek

./: README.md  Setup.py  pyproject.toml  test_script.py
motipy/: __init__.py  adjuster.py  image.py
motipy.egg-info/: PKG-INFO  SOURCES.txt
