[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motipy"
version = "0.1.0"
description = "A package for adjusting brightness of images."
authors = [{ name = "Nama Anda", email = "email@mirnhafebriasari.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["image", "brightness", "Pillow"]
dependencies = [
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/username/motipy"
